--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "ll": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bencode": "^2.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "magnet-link-generator": "^1.0.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "torrent-stream": "^1.2.1"
+    "sha-1": "^1.0.0",
+    "torrent-search-api": "^2.1.4",
+    "torrent-stream": "^1.2.1",
+    "torrent2magnet": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
